Nivel 2: Se actualiza crean pruebas unitarias para las clases de dominio. * Se modificar clases de dominio para ser records.